`LedgerImpl` singleton - test changes.

--- a/components/brave_rewards/core/test/BUILD.gn
+++ b/components/brave_rewards/core/test/BUILD.gn
@@ -19,7 +19,6 @@ source_set("test") {
     "//brave/components/brave_rewards/core/database/database_activity_info_unittest.cc",
     "//brave/components/brave_rewards/core/database/database_balance_report_info_unittest.cc",
     "//brave/components/brave_rewards/core/database/database_migration_unittest.cc",
-    "//brave/components/brave_rewards/core/database/database_mock.cc",
     "//brave/components/brave_rewards/core/database/database_mock.h",
     "//brave/components/brave_rewards/core/database/database_publisher_prefix_list_unittest.cc",
     "//brave/components/brave_rewards/core/database/database_util_unittest.cc",
@@ -94,6 +93,7 @@ source_set("test") {
     "//brave/components/brave_rewards/core/publisher/publisher_unittest.cc",
     "//brave/components/brave_rewards/core/test/bat_ledger_test.cc",
     "//brave/components/brave_rewards/core/test/bat_ledger_test.h",
+    "//brave/components/brave_rewards/core/test/mock_ledger_test.h",
     "//brave/components/brave_rewards/core/test/test_ledger_client.cc",
     "//brave/components/brave_rewards/core/test/test_ledger_client.h",
     "//brave/components/brave_rewards/core/test/test_ledger_client_unittest.cc",
