--- a/ios/app/BUILD.gn
+++ b/ios/app/BUILD.gn
@@ -29,6 +29,7 @@ source_set("app") {
     "//brave/components/brave_sync:constants",
     "//brave/components/brave_wallet/browser",
     "//brave/components/constants",
+    "//brave/components/ntp_background_images/browser",
     "//brave/components/p3a",
     "//brave/components/p3a:buildflags",
     "//brave/components/skus/browser",
@@ -44,6 +45,7 @@ source_set("app") {
     "//brave/ios/browser/api/history",
     "//brave/ios/browser/api/ipfs",
     "//brave/ios/browser/api/ledger",
+    "//brave/ios/browser/api/ntp_background_images",
     "//brave/ios/browser/api/opentabs",
     "//brave/ios/browser/api/p3a",
     "//brave/ios/browser/api/password",
