Implement shimmer effect while loading coin list

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -425,6 +425,7 @@ brave_java_resources = [
   "java/res/drawable/brave_sync_warning.xml",
   "java/res/drawable/card_bg.xml",
   "java/res/drawable/checked_circle_filled.xml",
+  "java/res/drawable/circle_shimmer.xml",
   "java/res/drawable/circular_progress.xml",
   "java/res/drawable/cookie_consent_tooltip_background.xml",
   "java/res/drawable/country_spinner_background.xml",
@@ -841,6 +842,7 @@ brave_java_resources = [
   "java/res/layout/brave_wallet_autolock_layout.xml",
   "java/res/layout/brave_wallet_connected_sites_list_item.xml",
   "java/res/layout/brave_wallet_connected_sites_preference_layout.xml",
+  "java/res/layout/brave_wallet_divider.xml",
   "java/res/layout/brave_wallet_edit_gas.xml",
   "java/res/layout/brave_wallet_network_item.xml",
   "java/res/layout/brave_wallet_networks_preference_layout.xml",
@@ -909,6 +911,7 @@ brave_java_resources = [
   "java/res/layout/layout_search_widget_promo.xml",
   "java/res/layout/location_status_incognito_badge.xml",
   "java/res/layout/market_coin_list_item.xml",
+  "java/res/layout/market_coin_shimmer_item.xml",
   "java/res/layout/menu_separator.xml",
   "java/res/layout/monthly_contribution_tooltip.xml",
   "java/res/layout/network_spinner_items.xml",
