--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -501,6 +501,7 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_rewards/test:brave_rewards_unit_tests",
     "//brave/components/l10n/common",
     "//brave/components/l10n/common:test_support",
+    "//brave/components/text_sanitize",
     "//brave/components/version_info",
     "//brave/third_party/challenge_bypass_ristretto_ffi",
     "//brave/third_party/rapidjson",
