--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -154,7 +154,9 @@ leo_icons = [
   "arrow-right.svg",
   "arrow-small-down.svg",
   "arrow-small-up.svg",
+  "autoplay-on.svg",
   "backward.svg",
+  "bluetooth.svg",
   "browser-extensions.svg",
   "carat-down.svg",
   "check-circle-filled.svg",
@@ -162,24 +164,31 @@ leo_icons = [
   "checkbox-checked.svg",
   "checkbox-unchecked.svg",
   "close.svg",
+  "code.svg",
   "coins-alt1.svg",
   "coins.svg",
   "copy.svg",
+  "cpu-chip.svg",
+  "credit-card.svg",
   "crypto-wallets.svg",
   "currency-exchange.svg",
   "discover.svg",
   "download.svg",
   "edit-box.svg",
   "edit-pencil.svg",
+  "ethereum-on.svg",
   "eye-off.svg",
   "eye-on.svg",
   "filter-settings.svg",
+  "file-edit.svg",
   "flash.svg",
   "flashdrive.svg",
+  "font-size.svg",
   "graph.svg",
   "grid04.svg",
   "help-outline.svg",
   "history.svg",
+  "image.svg",
   "info-filled.svg",
   "info-outline.svg",
   "key.svg",
@@ -187,10 +196,14 @@ leo_icons = [
   "link-normal.svg",
   "list-checks.svg",
   "list-settings.svg",
+  "location-on.svg",
   "lock.svg",
+  "media-visualizer.svg",
+  "microphone.svg",
   "money-bag-coins.svg",
   "more-horizontal.svg",
   "more-vertical.svg",
+  "motion-sensor.svg",
   "network-speed-average.svg",
   "news-business.svg",
   "news-car.svg",
@@ -215,6 +228,7 @@ leo_icons = [
   "news-weather.svg",
   "news-worldnews.svg",
   "nft.svg",
+  "notification.svg",
   "plus-add.svg",
   "product-bat-outline.svg",
   "product-brave-color.svg",
@@ -233,18 +247,29 @@ leo_icons = [
   "send.svg",
   "settings.svg",
   "shield-done.svg",
+  "smartphone-hand.svg",
+  "solana-on.svg",
   "sort-desc.svg",
+  "sparkles.svg",
   "stack.svg",
   "swap-horizontal.svg",
+  "sync.svg",
   "thumb-down.svg",
   "trash.svg",
   "tune.svg",
+  "usb.svg",
   "user-accounts.svg",
+  "user.svg",
   "verification-filled-color.svg",
   "verification-filled.svg",
+  "video-camera.svg",
+  "virtual-reality.svg",
+  "volume-on.svg",
   "warning-circle-filled.svg",
   "warning-triangle-filled.svg",
+  "warning-triangle-outline.svg",
   "window-tab-new.svg",
+  "windows-open.svg",
 ]
 
 if (enable_brave_vpn_panel) {
