--- a/components/brave_vpn/browser/connection/wireguard/win/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/BUILD.gn
@@ -17,15 +17,34 @@ source_set("win") {
   ]
 
   deps = [
+    ":utils",
     "brave_vpn_wireguard_service",
     "//base",
     "//brave/components/brave_vpn/browser/api",
     "//brave/components/brave_vpn/browser/connection:api",
     "//brave/components/brave_vpn/browser/connection:common",
+    "//brave/components/brave_vpn/browser/connection/common/win",
+    "//brave/components/brave_vpn/browser/connection/wireguard",
+    "//brave/components/brave_vpn/browser/connection/wireguard/common",
+    "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service:common",
     "//brave/components/brave_vpn/common",
-    "//brave/components/brave_vpn/common/mojom",
-    "//components/prefs",
     "//net",
     "//services/network/public/cpp",
+  ]
+}
+
+source_set("utils") {
+  sources = [
+    "wireguard_utils.cc",
+    "wireguard_utils.h",
+  ]
+
+  deps = [
+    "//base",
+    "//brave/components/brave_vpn/browser/connection:common",
+    "//brave/components/brave_vpn/browser/connection/wireguard/common",
+    "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service:brave_wireguard_manager_idl",
+    "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service:common",
+    "//brave/components/brave_vpn/common",
   ]
 }
