--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ node_modules/
 patches/**/*.patchinfo
 /third_party/android_deps/libs/com_google_android_play_core/core-1.10.0.aar
 /third_party/argon2/src
+/third_party/brave-vpn-wireguard-nt-dlls/
+/third_party/brave-vpn-wireguard-tunnel-dlls/
 /third_party/bip39wally-core-native/
 /third_party/ethash/src
 /third_party/bitcoin-core/src
