implement shimmer loading

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -426,6 +426,7 @@ brave_java_resources = [
   "java/res/drawable/brave_sync_warning.xml",
   "java/res/drawable/card_bg.xml",
   "java/res/drawable/checked_circle_filled.xml",
+  "java/res/drawable/circle_shimmer.xml",
   "java/res/drawable/circular_progress.xml",
   "java/res/drawable/cookie_consent_tooltip_background.xml",
   "java/res/drawable/country_spinner_background.xml",
@@ -930,6 +931,7 @@ brave_java_resources = [
   "java/res/layout/rewards_tipping_success_contribution_fragment.xml",
   "java/res/layout/rewards_you_are_not_earning_dialog.xml",
   "java/res/layout/search_preference.xml",
+  "java/res/layout/shimmer_skeleton_item.xml",
   "java/res/layout/swap_bottom_sheet.xml",
   "java/res/layout/tipping_banner_tipping_panel_inside_layout.xml",
   "java/res/layout/tipping_verified_creator_tooltip.xml",
