Add PowerShell Set-VpnConnectionIPsecConfiguration

--- a/components/brave_vpn/browser/connection/ikev2/win/BUILD.gn
+++ b/components/brave_vpn/browser/connection/ikev2/win/BUILD.gn
@@ -16,6 +16,7 @@ source_set("ras_utils") {
   libs = [ "rasapi32.lib" ]
   deps = [
     "//base",
+    "//brave/base",
     "//brave/components/brave_vpn/browser/connection:common",
     "//brave/components/brave_vpn/common",
   ]
