--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -556,6 +556,9 @@ source_set("internal") {
     "catalog/catalog_json_reader.cc",
     "catalog/catalog_json_reader.h",
     "catalog/catalog_observer.h",
+    "catalog/catalog_request.cc",
+    "catalog/catalog_request.h",
+    "catalog/catalog_request_delegate.h",
     "catalog/catalog_url_request_builder.cc",
     "catalog/catalog_url_request_builder.h",
     "catalog/catalog_url_request_builder_util.cc",
@@ -1197,6 +1200,7 @@ source_set("internal") {
     "//brave/components/brave_rewards/core",
     "//brave/components/constants",
     "//brave/components/l10n/common",
+    "//brave/components/ntp_background_images/common",
     "//brave/components/version_info",
     "//brave/third_party/challenge_bypass_ristretto_ffi",
     "//brave/third_party/rapidjson",
