feat(wallet): Portfolio Filters and Display Settings

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -173,6 +173,7 @@ leo_icons = [
   "edit-pencil.svg",
   "eye-off.svg",
   "eye-on.svg",
+  "filter-settings.svg",
   "flash.svg",
   "graph.svg",
   "grid04.svg",
@@ -184,6 +185,7 @@ leo_icons = [
   "launch.svg",
   "link-normal.svg",
   "list-checks.svg",
+  "list-settings.svg",
   "lock.svg",
   "money-bag-coins.svg",
   "more-horizontal.svg",
@@ -229,6 +231,7 @@ leo_icons = [
   "send.svg",
   "settings.svg",
   "shield-done.svg",
+  "sort-desc.svg",
   "swap-horizontal.svg",
   "thumb-down.svg",
   "trash.svg",
