--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -413,6 +413,7 @@ test("brave_unit_tests") {
       "//brave/browser/ui/commands:unit_tests",
       "//brave/browser/ui/toolbar:brave_app_menu_unit_test",
       "//brave/browser/ui/views/download/bubble:unit_tests",
+      "//brave/browser/ui/views/tabs:unit_tests",
       "//brave/browser/ui/webui/settings:unittests",
       "//brave/browser/ui/whats_new:unit_test",
       "//brave/components/brave_shields/common:mojom",
