Feat activity tab (#18631)
* add activity tab empty placeholder strings

* add activity layout

* - Fix passing the required network than using default
- add keyrings helper method

* - #30277, #24384: use correct network for transaction and amounts
- add keyring helper method and clean up

* add activity tab title

* add transaction fragment

* add transaction fragment

* add transaction fragment

* show approve dialog  and clean up

* update string to reuse

* create tx details UI and flow

* show empty activity list message

* - show tx details
- formatting

* - add progress bar
- optimize flow

* clean-up

* updates per review

* update empty tx list message

* rebase master and update

* implement shimmer loading

* fix after pulling master

* clean-up

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -58,6 +58,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/PortfolioModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/SendModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/SwapModel.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/domain/TransactionsModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/UserAssetModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/WalletModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/helpers/Api33AndPlusBackPressHelper.java",
@@ -134,6 +135,8 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/PortfolioFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SolanaTxDetailsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SwapBottomSheetDialogFragment.java",
+  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TransactionDetailsSheetFragment.java",
+  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TransactionsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TwoLineItemFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxDetailsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxFragment.java",
