--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -894,6 +894,7 @@ brave_java_resources = [
   "java/res/layout/fragment_sign_tx_message.xml",
   "java/res/layout/fragment_transaction.xml",
   "java/res/layout/fragment_transaction_details.xml",
+  "java/res/layout/fragment_transactions.xml",
   "java/res/layout/fragment_troubleshooting_onboarding.xml",
   "java/res/layout/fragment_two_line_item_list.xml",
   "java/res/layout/fragment_unlock_wallet.xml",
@@ -907,6 +908,7 @@ brave_java_resources = [
   "java/res/layout/item_network_selector.xml",
   "java/res/layout/item_news_settings.xml",
   "java/res/layout/item_news_settings_section.xml",
+  "java/res/layout/item_two_line_horizontal.xml",
   "java/res/layout/layout_search_widget_promo.xml",
   "java/res/layout/location_status_incognito_badge.xml",
   "java/res/layout/market_coin_list_item.xml",
@@ -935,12 +937,14 @@ brave_java_resources = [
   "java/res/layout/rewards_tipping_success_contribution_fragment.xml",
   "java/res/layout/rewards_you_are_not_earning_dialog.xml",
   "java/res/layout/search_preference.xml",
+  "java/res/layout/shimmer_skeleton_item.xml",
   "java/res/layout/swap_bottom_sheet.xml",
   "java/res/layout/tipping_banner_tipping_panel_inside_layout.xml",
   "java/res/layout/tipping_verified_creator_tooltip.xml",
   "java/res/layout/tipping_warning_message_layout.xml",
   "java/res/layout/toolbar_space.xml",
   "java/res/layout/tracker_item_layout.xml",
+  "java/res/layout/tx_details_bottom_sheet.xml",
   "java/res/layout/user_wallet_activity.xml",
   "java/res/layout/verify_wallet_activity.xml",
   "java/res/layout/vpn_settings_callout_modal_layout.xml",
