Refactor Brave Ads catalog_request to catalog_url_request

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -556,13 +556,13 @@ source_set("internal") {
     "catalog/catalog_json_reader.cc",
     "catalog/catalog_json_reader.h",
     "catalog/catalog_observer.h",
-    "catalog/catalog_request.cc",
-    "catalog/catalog_request.h",
-    "catalog/catalog_request_delegate.h",
+    "catalog/catalog_url_request.cc",
+    "catalog/catalog_url_request.h",
     "catalog/catalog_url_request_builder.cc",
     "catalog/catalog_url_request_builder.h",
     "catalog/catalog_url_request_builder_util.cc",
     "catalog/catalog_url_request_builder_util.h",
+    "catalog/catalog_url_request_delegate.h",
     "catalog/catalog_util.cc",
     "catalog/catalog_util.h",
     "common/calendar/calendar_leap_year_util.cc",
