--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -238,6 +238,8 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_ads/core/internal/catalog/catalog_unittest_constants.h",
     "//brave/components/brave_ads/core/internal/catalog/catalog_url_request_builder_unittest.cc",
     "//brave/components/brave_ads/core/internal/catalog/catalog_url_request_builder_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/catalog/catalog_url_request_delegate_mock.cc",
+    "//brave/components/brave_ads/core/internal/catalog/catalog_url_request_delegate_mock.h",
     "//brave/components/brave_ads/core/internal/catalog/catalog_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/common/calendar/calendar_leap_year_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/common/calendar/calendar_util_unittest.cc",
