Refactor Brave Ads issuers to issuers_url_request

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -105,19 +105,19 @@ source_set("internal") {
     "account/issuers/issuer_info.cc",
     "account/issuers/issuer_info.h",
     "account/issuers/issuer_types.h",
-    "account/issuers/issuers.cc",
-    "account/issuers/issuers.h",
-    "account/issuers/issuers_delegate.h",
     "account/issuers/issuers_info.cc",
     "account/issuers/issuers_info.h",
     "account/issuers/issuers_json_reader.cc",
     "account/issuers/issuers_json_reader.h",
     "account/issuers/issuers_json_reader_util.cc",
     "account/issuers/issuers_json_reader_util.h",
+    "account/issuers/issuers_url_request.cc",
+    "account/issuers/issuers_url_request.h",
     "account/issuers/issuers_url_request_builder.cc",
     "account/issuers/issuers_url_request_builder.h",
     "account/issuers/issuers_url_request_builder_util.cc",
     "account/issuers/issuers_url_request_builder_util.h",
+    "account/issuers/issuers_url_request_delegate.h",
     "account/issuers/issuers_util.cc",
     "account/issuers/issuers_util.h",
     "account/issuers/issuers_value_util.cc",
