Optimize resource loading for several profiles.

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -1065,6 +1065,10 @@ source_set("internal") {
     "reminder/reminder_feature.h",
     "reminder/reminders/clicked_same_ad_multiple_times_reminder_util.cc",
     "reminder/reminders/clicked_same_ad_multiple_times_reminder_util.h",
+    "resources/async/resource_async_handler.h",
+    "resources/async/resource_async_manager.cc",
+    "resources/async/resource_async_manager.h",
+    "resources/async/resource_ref_counted_proxy_base.h",
     "resources/behavioral/anti_targeting/anti_targeting_feature.cc",
     "resources/behavioral/anti_targeting/anti_targeting_feature.h",
     "resources/behavioral/anti_targeting/anti_targeting_info.cc",
@@ -1099,6 +1103,10 @@ source_set("internal") {
     "resources/contextual/text_classification/text_classification_resource.cc",
     "resources/contextual/text_classification/text_classification_resource.h",
     "resources/contextual/text_classification/text_classification_resource_constants.h",
+    "resources/contextual/text_classification/text_processing_ref_counted_proxy.cc",
+    "resources/contextual/text_classification/text_processing_ref_counted_proxy.h",
+    "resources/contextual/text_embedding/embedding_processing_ref_counted_proxy.cc",
+    "resources/contextual/text_embedding/embedding_processing_ref_counted_proxy.h",
     "resources/contextual/text_embedding/text_embedding_resource.cc",
     "resources/contextual/text_embedding/text_embedding_resource.h",
     "resources/contextual/text_embedding/text_embedding_resource_constants.h",
