--- a/app/vector_icons/BUILD.gn
+++ b/app/vector_icons/BUILD.gn
@@ -4,6 +4,7 @@
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
+import("//brave/components/playlist/common/buildflags/buildflags.gni")
 import("//brave/components/speedreader/common/buildflags/buildflags.gni")
 import("//build/config/ui.gni")
 import("//components/vector_icons/vector_icons.gni")
@@ -33,23 +34,34 @@ aggregate_vector_icons("brave_vector_icons") {
   # `arrow-right.svg` becomes `leo_arrow_right.icon`
   leo_icons = [
     "leo_arrow_right.icon",
+    "leo_check_circle_filled.icon",
+    "leo_folder_exchange.icon",
     "leo_heart_filled.icon",
     "leo_heart_outline.icon",
     "leo_product_brave_wallet.icon",
     "leo_product_readermode.icon",
     "leo_product_speedreader.icon",
     "leo_rss.icon",
+    "leo_trash.icon",
+    "leo_check_circle_outline.icon",
     "leo_verification_filled.icon",
   ]
 
   if (toolkit_views) {
     leo_icons += [
       "leo_plus_add.icon",
-      "leo_product_playlist_add.icon",
-      "leo_product_playlist_added.icon",
       "leo_search.icon",
     ]
   }
+
+  if (enable_playlist_webui) {
+    leo_icons += [
+      "leo_product_playlist.icon",
+      "leo_product_playlist_add.icon",
+      "leo_product_playlist_added.icon",
+    ]
+  }
+
   sources +=
       rebase_path(leo_icons, ".", "//brave/node_modules/@brave/leo/icons-skia")
 
