--- a/browser/ui/color/sources.gni
+++ b/browser/ui/color/sources.gni
@@ -16,8 +16,10 @@ if (!is_android) {
 
   brave_browser_ui_color_mixers_deps += [
     "//brave/browser/themes",
+    "//brave/browser/ui/color:leo_colors",
     "//brave/browser/ui/tabs",
     "//brave/components/brave_vpn/common/buildflags",
+    "//brave/components/playlist/common",
     "//brave/components/speedreader/common/buildflags",
     "//skia",
     "//ui/color",
