Add GRDP for command strings

--- a/app/command_utils.cc.template
+++ b/app/command_utils.cc.template
@@ -10,17 +10,18 @@
 #include "base/containers/fixed_flat_map.h"
 #include "base/containers/span.h"
 #include "base/feature_list.h"
-#include "base/strings/string_piece.h"
 #include "brave/app/brave_command_ids.h"
 #include "brave/components/commander/common/features.h"
 #include "brave/components/commands/common/features.h"
 #include "chrome/app/chrome_command_ids.h"
+#include "ui/base/l10n/l10n_util.h"
+#include "components/grit/brave_components_strings.h"
 
 namespace commands {
 namespace {
 
-constexpr auto kCommandInfos =
-    base::MakeFixedFlatMap<int, base::StringPiece>({
+constexpr auto kCommandTranslationIds =
+    base::MakeFixedFlatMap<int, int>({
 COMMAND_NAMES
 });
 
@@ -37,17 +38,18 @@ base::span<const int> GetCommands() {
   return kCommandIds;
 }
 
-base::StringPiece GetCommandName(int command_id) {
+std::string GetCommandName(int command_id) {
   DCHECK(base::FeatureList::IsEnabled(features::kBraveCommands) ||
          commander::CommanderEnabled())
       << "This should only be used when |kBraveCommands| is enabled.";
-  auto it = kCommandInfos.find(command_id);
-  CHECK(it != kCommandInfos.end())
+  auto it = kCommandTranslationIds.find(command_id);
+  CHECK(it != kCommandTranslationIds.end())
       << "Unknown command " << command_id
       << ". This function should only be used for known "
          "commands (i.e. commands in |GetCommands()|). "
          "This command should probably be added.";
-  return it->second.data();
+
+  return l10n_util::GetStringUTF8(it->second);
 }
 
 }  // namespace commands
