--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -322,6 +322,7 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_ads/core/internal/diagnostics/entries/last_unidle_time_diagnostic_entry_unittest.cc",
     "//brave/components/brave_ads/core/internal/diagnostics/entries/locale_diagnostic_entry_unittest.cc",
     "//brave/components/brave_ads/core/internal/fl/predictors/predictors_manager_unittest.cc",
+    "//brave/components/brave_ads/core/internal/fl/predictors/variables/ad_last_seen_hours_ago_predictor_variable_unittest.cc",
     "//brave/components/brave_ads/core/internal/fl/predictors/variables/average_clickthrough_rate_predictor_variable_unittest.cc",
     "//brave/components/brave_ads/core/internal/fl/predictors/variables/last_notification_ad_was_clicked_predictor_variable_unittest.cc",
     "//brave/components/brave_ads/core/internal/fl/predictors/variables/notification_ad_event_predictor_variable_unittest.cc",
