[Shortcuts]: Improve dark theme (#18725)

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -224,6 +224,7 @@ leo_icons = [
   "qr-code.svg",
   "radio-checked.svg",
   "radio-unchecked.svg",
+  "remove-circle-outline.svg",
   "rocket.svg",
   "safe.svg",
   "search-fuel-tank.svg",
